test/classes/initializers/parentCall/inParallel.good
inParallel.chpl:4: In initializer:
inParallel.chpl:6: error: use of super.init() call in a parallel statement
